...
                    </Text>

                    <Spacer size={50} />

                    <SensitiveAccessibilityView>
                        <TextInput
                            testID="seed-input"
                            placeholder={
                                alternativeSeedAlphabet
                                    ? Localize.t('account.enterSecret')
                                    : Localize.t('account.pleaseEnterYourFamilySeed')
                            }
                            autoCapitalize="none"
...
                    )}
                </KeyboardAwareScrollView>

                <Footer style={[AppStyles.centerAligned, AppStyles.row]}>
                    <View style={[AppStyles.flex3, AppStyles.paddingRightSml]}>
                        <Button
                            testID="back-button"
                            light
                            label={Localize.t('global.back')}
                            icon="IconChevronLeft"
                            onPress={goBack}
                        />
                    </View>
                    <View style={AppStyles.flex5}>
                        <Button
                            testID="next-button"
                            isLoading={isLoading}
                            textStyle={AppStyles.strong}
                            label={Localize.t('global.next')}
                            onPress={this.onNextPress}
                        />
                    </View>
...
