...
        const { accounts, contentHeight, paddingBottom } = this.state;

        if (!accounts || !contentHeight) return null;

        return (
            <ActionPanel
                testID="switch-account-overlay"
                height={contentHeight}
                onSlideDown={this.onPanelSlideDown}
                ref={this.actionPanelRef}
            >
                <View style={[
                    AppStyles.row,
...
                                onPress={this.onAddPressed}
                            />
                        </View>
                    )}
                </View>
                <ScrollView
                    testID="switch-account-scroll"
                    style={AppStyles.flex1}
                    showsVerticalScrollIndicator={false}
                    contentContainerStyle={{ paddingBottom }}
                >
                    {this.renderContent()}
                </ScrollView>
...
