...
    };

    render() {
        const { title, items, description } = this.props;

        return (
            <View testID="picker-modal" style={styles.container}>
                <Header
                    leftComponent={{
                        testID: 'back-button',
                        icon: 'IconChevronLeft',
                        onPress: Navigator.pop,
                    }}
...
