...
                    />
                </View>
            );
        }

        return (
            <View testID="account-add-screen" style={AppStyles.container}>
                <Header
                    leftComponent={{
                        icon: 'IconChevronLeft',
                        onPress: Navigator.pop,
                    }}
                    centerComponent={{ text: Localize.t('account.addAccount') }}
...
